--- a/level_zero/tools/test/unit_tests/CMakeLists.txt
+++ b/level_zero/tools/test/unit_tests/CMakeLists.txt
@@ -119,7 +119,7 @@ if(MSVC)
     )
     set(RUN_ULT_CMD $<TARGET_FILE:${TARGET_NAME}>)
 else()
-    set(RUN_ULT_CMD LD_LIBRARY_PATH=$<TARGET_FILE_DIR:${TARGET_NAME}> $<TARGET_FILE:${TARGET_NAME}>)
+    set(RUN_ULT_CMD LD_LIBRARY_PATH=$<TARGET_FILE_DIR:${TARGET_NAME}>:$ENV{LD_LIBRARY_PATH} $<TARGET_FILE:${TARGET_NAME}>)
 endif()
 
 create_source_tree(${TARGET_NAME} ${L0_ROOT_DIR}/..)
